--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     font-family: Arial, sans-serif;
 }
 
 h1 {
-    color: #00698f;
+    color: #000000;
 }
